[package]
name = "cryptonite"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.x86_64-unknown-linux-musl]
linker = "rust-lld"

[dependencies]
aes-gcm = "0.10.2"
rand= "0.8.5"
ring = "0.16.20"
num-traits = "0.2.15"
clap = { version = "4.3.0", features = ["cargo"] }
text_io = "0.1.12"
